--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 393,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 1\n",
@@ -41,9 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 394,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    | first_name   | last_name   | gender   | email                           | cell           |   age |\n",
+      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|\n",
+      "|  0 | Guimar       | da Mata     | male     | guimar.damata@example.com       | (29) 5636-9110 |    67 |\n",
+      "|  1 | Carlúcia     | Vieira      | female   | carlucia.vieira@example.com     | (59) 9856-0868 |    30 |\n",
+      "|  2 | Clodomiro    | Viana       | male     | clodomiro.viana@example.com     | (47) 8176-9128 |    59 |\n",
+      "|  3 | Evangelista  | Silva       | male     | evangelista.silva@example.com   | (41) 8319-1577 |    70 |\n",
+      "|  4 | Fulgêncio    | Fernandes   | male     | fulgencio.fernandes@example.com | (66) 2726-3136 |    29 |\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 1.1\n",
@@ -70,9 +92,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 395,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    | first_name   | last_name   | gender   | email                           | cell           |   age | state          |\n",
+      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|:---------------|\n",
+      "|  0 | Clodomiro    | Viana       | male     | clodomiro.viana@example.com     | (47) 8176-9128 |    59 | Santa Catarina |\n",
+      "|  1 | Evangelista  | Silva       | male     | evangelista.silva@example.com   | (41) 8319-1577 |    70 | Paraná         |\n",
+      "|  2 | Fulgêncio    | Fernandes   | male     | fulgencio.fernandes@example.com | (66) 2726-3136 |    29 | Mato Grosso    |\n",
+      "|  3 | Balbino      | Almeida     | male     | balbino.almeida@example.com     | (18) 2615-8313 |    70 | São Paulo      |\n",
+      "|  4 | Odara        | Silveira    | female   | odara.silveira@example.com      | (44) 5816-3343 |    38 | Paraná         |\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 1.2\n",
@@ -171,9 +207,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 396,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bulbasaur - <Response [200]>\n",
+      "charmander - <Response [200]>\n",
+      "squirtle - <Response [200]>\n",
+      "pikachu - <Response [200]>\n",
+      "chikorita - <Response [200]>\n",
+      "cyndaquil - <Response [200]>\n",
+      "totodile - <Response [200]>\n",
+      "treecko - <Response [200]>\n",
+      "torchic - <Response [200]>\n",
+      "mudkip - <Response [200]>\n",
+      "turtwig - <Response [200]>\n",
+      "chimchar - <Response [200]>\n",
+      "piplup - <Response [200]>\n",
+      "snivy - <Response [200]>\n",
+      "tepig - <Response [200]>\n",
+      "oshawott - <Response [200]>\n",
+      "chespin - <Response [200]>\n",
+      "fennekin - <Response [200]>\n",
+      "froakie - <Response [200]>\n",
+      "rowlet - <Response [200]>\n",
+      "litten - <Response [200]>\n",
+      "popplio - <Response [200]>\n",
+      "grookey - <Response [200]>\n",
+      "scorbunny - <Response [200]>\n",
+      "sobble - <Response [200]>\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 2\n",
@@ -224,9 +292,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 397,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    | first_name   | last_name   | gender   | email                           | cell           |   age | state          | pokemon   |\n",
+      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|:---------------|:----------|\n",
+      "|  0 | Clodomiro    | Viana       | male     | clodomiro.viana@example.com     | (47) 8176-9128 |    59 | Santa Catarina | popplio   |\n",
+      "|  1 | Evangelista  | Silva       | male     | evangelista.silva@example.com   | (41) 8319-1577 |    70 | Paraná         | torchic   |\n",
+      "|  2 | Fulgêncio    | Fernandes   | male     | fulgencio.fernandes@example.com | (66) 2726-3136 |    29 | Mato Grosso    | bulbasaur |\n",
+      "|  3 | Balbino      | Almeida     | male     | balbino.almeida@example.com     | (18) 2615-8313 |    70 | São Paulo      | chikorita |\n",
+      "|  4 | Odara        | Silveira    | female   | odara.silveira@example.com      | (44) 5816-3343 |    38 | Paraná         | mudkip    |\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 2.1\n",
@@ -242,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,9 +345,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 399,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder for type *grass* created successfully with ID: 1i_h8iSixiEnoXgkHUCGn_gfX4Yyxa1Gw\n",
+      "Folder for type *electric* created successfully with ID: 1zptJq5hbPJweNDhUT3cPY_lo-aKlRc_J\n",
+      "Folder for type *flying* created successfully with ID: 11cmXfgoAT2oLiUp15QcBi-krz2z87RGP\n",
+      "Folder for type *fire* created successfully with ID: 1-35HN45ksh0ldfEqRejIEdxhX2x04wTe\n",
+      "Folder for type *water* created successfully with ID: 16dhjTNwQvau3M257txU6dg2n3GEXNXoS\n",
+      "Folder for type *poison* created successfully with ID: 1wKx3eKli6IWSOQXMga8x5e2z-BaV0r5u\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 3.b\n",
@@ -314,9 +409,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 400,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File for type *grass* and gender *male* created successfully with ID: 1TgQ-8BkBNYjjqT1BOCF_RKgGnUlpdmf2\n",
+      "File for type *grass* and gender *female* created successfully with ID: 11BKp2Nky2bovKMqOw7MX1p-gnrDNepm8\n",
+      "File for type *electric* and gender *male* created successfully with ID: 1YxhdoPFA94PzS-symzypZOkfIRw20xHe\n",
+      "File for type *electric* and gender *female* created successfully with ID: 1Y_7Nm61eDLtAbcv71YE3SJD8JMp_I0iW\n",
+      "File for type *flying* and gender *male* created successfully with ID: 1tidDCDZRjrHC2r50lnF0Xth7ahqIcb8T\n",
+      "File for type *flying* and gender *female* created successfully with ID: 16O2WXs6aIG1Mtdzz44n5VHHTUdc1Wl_2\n",
+      "File for type *fire* and gender *male* created successfully with ID: 1IMCVdtu_nzMxGR-TsKVbj9gav1Qskpik\n",
+      "File for type *fire* and gender *female* created successfully with ID: 1ANp0T7Bl7XxEK842NcHgtXCWgcuGPm-6\n",
+      "File for type *water* and gender *male* created successfully with ID: 1M5l45IXuQQmjDrnuF6I4IB9xVgbPRJk-\n",
+      "File for type *water* and gender *female* created successfully with ID: 1SpBkwFy5trsIpfswPOkOZyeVan8TBKI_\n",
+      "File for type *poison* and gender *male* created successfully with ID: 14XC5rpj8hcAXGO9GmxmHtAWsvaiO2IAo\n",
+      "File for type *poison* and gender *female* created successfully with ID: 1U2kNGA8GTDXOdNdnJCa-_RYyyOjPT4z3\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 3.1\n",
@@ -359,24 +473,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 456,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=258343893071-cjl374q7gmric124p10qb9kncgkieqmd.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A48685%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fspreadsheets+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&state=5CAOWX4SUx25hZvMojt4rKl3c4IfUh&access_type=offline\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'spreadsheetId': '1Xq9HjSUPDxW0aO6AO-B1cdTxyCK5iPDrfReOh8Gkg9w',\n",
+       " 'replies': [{}]}"
+      ]
+     },
+     "execution_count": 456,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 4\n",
     "\n",
-    "Por fim, crie um Google Sheets com um resumo indicando:\n",
-    "O número de pessoas por região do Brasil (Norte, Sul, Sudeste, Nordeste, Centro-Oeste)\n",
-    "e o elemento de seus Pokemons\n",
+    "Por fim, crie um Google Sheets com um resumo\n",
+    "\"\"\"\n",
+    "\n",
+    "credentials_dict = json.load(open(credentials_json))\n",
+    "gc, authorized_user = gspread.oauth_from_dict(credentials_dict)\n",
+    "\n",
+    "sh = gc.create(\"[GREENPEACE] Resumo\")\n",
+    "\n",
+    "worksheet_1 = sh.add_worksheet(title=\"Número de pessoas por região do Brasil\", rows=100, cols=20)\n",
+    "worksheet_2 = sh.add_worksheet(title=\"Elemento de pokemons por região do Brasil\", rows=100, cols=20)\n",
+    "\n",
+    "sh.del_worksheet(sh.worksheet(\"Página1\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 495,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| region       |   count |\n",
+      "|:-------------|--------:|\n",
+      "| Sudeste      |     203 |\n",
+      "| Nordeste     |     151 |\n",
+      "| Sul          |     143 |\n",
+      "| Norte        |     103 |\n",
+      "| Centro-Oeste |      68 |\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'spreadsheetId': '1Xq9HjSUPDxW0aO6AO-B1cdTxyCK5iPDrfReOh8Gkg9w',\n",
+       " 'updatedRange': \"'Número de pessoas por região do Brasil'!A1:B6\",\n",
+       " 'updatedRows': 6,\n",
+       " 'updatedColumns': 2,\n",
+       " 'updatedCells': 12}"
+      ]
+     },
+     "execution_count": 495,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Tarefa 4.a\n",
+    "\n",
+    "Indique o número de pessoas por região do Brasil (Norte, Sul, Sudeste, Nordeste, Centro-Oeste)\n",
     "\"\"\"\n",
     "\n",
     "regions = {\n",
-    "    \"Norte\": [\"Amazonas\", \"Acre\", \"Tocantins\"],\n",
-    "    \"Sul\": [\"Rio Grande do Sul\", \"Santa Catarina\", \"Paraná\"],\n",
-    "    \"Sudeste\": [\"São Paulo\", \"Rio de Janeiro\", \"Minas Gerais\", \"Espírito Santo\"],\n",
-    "    \"Nordeste\": [\"Pernambuco\", \"Bahia\"],\n",
-    "    \"Centro-Oeste\": [\"Goiás\", \"Mato Grosso\", \"Mato Grosso do Sul\", \"Distrito Federal\"],\n",
+    "    \"Norte\": [\n",
+    "        \"Amazonas\",\n",
+    "        \"Acre\",\n",
+    "        \"Tocantins\",\n",
+    "        \"Rondônia\",\n",
+    "        \"Pará\",\n",
+    "        \"Roraima\",\n",
+    "        \"Amapá\",\n",
+    "    ],\n",
+    "    \"Sul\": [\n",
+    "        \"Rio Grande do Sul\",\n",
+    "        \"Santa Catarina\",\n",
+    "        \"Paraná\",\n",
+    "        \"Rio Grande do Sul\",\n",
+    "    ],\n",
+    "    \"Sudeste\": [\n",
+    "        \"São Paulo\",\n",
+    "        \"Rio de Janeiro\",\n",
+    "        \"Minas Gerais\",\n",
+    "        \"Espírito Santo\",\n",
+    "    ],\n",
+    "    \"Nordeste\": [\n",
+    "        \"Pernambuco\",\n",
+    "        \"Bahia\",\n",
+    "        \"Ceará\",\n",
+    "        \"Rio Grande do Norte\",\n",
+    "        \"Paraíba\",\n",
+    "        \"Maranhão\",\n",
+    "        \"Piauí\",\n",
+    "        \"Sergipe\",\n",
+    "        \"Alagoas\",\n",
+    "    ],\n",
+    "    \"Centro-Oeste\": [\n",
+    "        \"Goiás\",\n",
+    "        \"Mato Grosso\",\n",
+    "        \"Mato Grosso do Sul\",\n",
+    "        \"Distrito Federal\",\n",
+    "    ],\n",
     "}\n",
     "\n",
     "\n",
@@ -396,25 +611,55 @@
     "\n",
     "extended_users_df = users_df.copy()\n",
     "extended_users_df[\"region\"] = users_df[\"state\"].apply(get_region)\n",
-    "extended_users_df[\"pokemon_types\"] = users_df[\"pokemon\"].apply(get_pokemon_types)\n",
+    "users_by_region_df = extended_users_df[\"region\"].value_counts().to_frame()\n",
+    "print(users_by_region_df.to_markdown())\n",
     "\n",
-    "filtered_regions_df = extended_users_df[[\"region\", \"pokemon_types\"]].copy()\n",
-    "filtered_regions_df[\"pokemon_types\"] = filtered_regions_df[\"pokemon_types\"].apply(lambda x: \",\".join(x))\n",
-    "filtered_regions_df = (\n",
-    "    filtered_regions_df.groupby(\"region\")[\"pokemon_types\"].apply(lambda x: \",\".join(x.astype(str))).reset_index()\n",
-    ")\n",
-    "filtered_regions_df[\"user_count\"] = extended_users_df.groupby(\"region\").size().values\n",
-    "filtered_regions_df = filtered_regions_df[[\"region\", \"user_count\", \"pokemon_types\"]]\n",
-    "\n",
-    "print(filtered_regions_df)\n"
+    "users_by_region_df.reset_index(inplace=True)\n",
+    "users_by_region_df.columns = [\"Região\", \"Número de pessoas\"]\n",
+    "worksheet_1.update([users_by_region_df.columns.values.tolist()] + users_by_region_df.values.tolist())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 496,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|          |   Norte |   Sul |   Sudeste |   Nordeste |   Centro-Oeste |\n",
+      "|:---------|--------:|------:|----------:|-----------:|---------------:|\n",
+      "| grass    |      35 |    46 |        64 |         49 |             19 |\n",
+      "| electric |       2 |    10 |         6 |          4 |              0 |\n",
+      "| flying   |       5 |     4 |         5 |          4 |              7 |\n",
+      "| fire     |      27 |    35 |        64 |         55 |             19 |\n",
+      "| water    |      39 |    52 |        69 |         43 |             30 |\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'spreadsheetId': '1Xq9HjSUPDxW0aO6AO-B1cdTxyCK5iPDrfReOh8Gkg9w',\n",
+       " 'updatedRange': \"'Elemento de pokemons por região do Brasil'!A1:F7\",\n",
+       " 'updatedRows': 7,\n",
+       " 'updatedColumns': 6,\n",
+       " 'updatedCells': 42}"
+      ]
+     },
+     "execution_count": 496,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "Tarefa 4.b\n",
+    "\n",
+    "Indique o número de elementos de Pokemon por região do Brasil\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "types_by_region = {}\n",
     "for region in regions.keys():\n",
     "    types_by_region[region] = {}\n",
@@ -426,34 +671,11 @@
     "        types_by_region[get_region(row.state)][pokemon_type] += 1\n",
     "\n",
     "types_by_region_df = pd.DataFrame(types_by_region)\n",
-    "print(types_by_region_df.to_markdown())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "credentials_dict = json.load(open(credentials_json))\n",
-    "gc, authorized_user = gspread.oauth_from_dict(credentials_dict)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sh = gc.create(\"[GREENPEACE] Resumo\")\n",
+    "print(types_by_region_df.head().to_markdown())\n",
     "\n",
-    "worksheet = sh.add_worksheet(title=\"Número de pessoas por região do Brasil\", rows=100, cols=20)\n",
-    "worksheet.update([filtered_regions_df.columns.values.tolist()] + filtered_regions_df.values.tolist())\n",
-    "\n",
-    "worksheet = sh.add_worksheet(title=\"Elemento de pokemons por região do Brasil\", rows=100, cols=20)\n",
-    "worksheet.update([types_by_region_df.columns.values.tolist()] + types_by_region_df.values.tolist())\n",
-    "\n",
-    "sh.del_worksheet(sh.worksheet(\"Página1\"))\n"
+    "types_by_region_df.index.name = \"Elemento\"\n",
+    "types_by_region_df.reset_index(inplace=True)\n",
+    "worksheet_2.update([types_by_region_df.columns.values.tolist()] + types_by_region_df.values.tolist())\n"
    ]
   }
  ],
