Add images to Exercicio 2. Generate 2.html

--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -473,24 +473,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=258343893071-cjl374q7gmric124p10qb9kncgkieqmd.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A48685%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fspreadsheets+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&state=5CAOWX4SUx25hZvMojt4rKl3c4IfUh&access_type=offline\n"
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=258343893071-cjl374q7gmric124p10qb9kncgkieqmd.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A53257%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fspreadsheets+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&state=v0ycLKBr9OlfpV962PQHuqmUqMaoRq&access_type=offline\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'spreadsheetId': '1Xq9HjSUPDxW0aO6AO-B1cdTxyCK5iPDrfReOh8Gkg9w',\n",
+       "{'spreadsheetId': '11M9cEiL0IMbOv8_Z7RMz-p2O7m8Opff70x0M9aTpaJI',\n",
        " 'replies': [{}]}"
       ]
      },
-     "execution_count": 456,
+     "execution_count": 498,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,6 +500,7 @@
     "Tarefa 4\n",
     "\n",
     "Por fim, crie um Google Sheets com um resumo\n",
+    "Disponível em: https://docs.google.com/spreadsheets/d/11M9cEiL0IMbOv8_Z7RMz-p2O7m8Opff70x0M9aTpaJI/edit?usp=sharing\n",
     "\"\"\"\n",
     "\n",
     "credentials_dict = json.load(open(credentials_json))\n",
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
@@ -534,14 +535,14 @@
     {
      "data": {
       "text/plain": [
-       "{'spreadsheetId': '1Xq9HjSUPDxW0aO6AO-B1cdTxyCK5iPDrfReOh8Gkg9w',\n",
+       "{'spreadsheetId': '11M9cEiL0IMbOv8_Z7RMz-p2O7m8Opff70x0M9aTpaJI',\n",
        " 'updatedRange': \"'Número de pessoas por região do Brasil'!A1:B6\",\n",
        " 'updatedRows': 6,\n",
        " 'updatedColumns': 2,\n",
        " 'updatedCells': 12}"
       ]
      },
-     "execution_count": 495,
+     "execution_count": 499,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [
     {
@@ -640,14 +641,14 @@
     {
      "data": {
       "text/plain": [
-       "{'spreadsheetId': '1Xq9HjSUPDxW0aO6AO-B1cdTxyCK5iPDrfReOh8Gkg9w',\n",
+       "{'spreadsheetId': '11M9cEiL0IMbOv8_Z7RMz-p2O7m8Opff70x0M9aTpaJI',\n",
        " 'updatedRange': \"'Elemento de pokemons por região do Brasil'!A1:F7\",\n",
        " 'updatedRows': 7,\n",
        " 'updatedColumns': 6,\n",
        " 'updatedCells': 42}"
       ]
      },
-     "execution_count": 496,
+     "execution_count": 500,
      "metadata": {},
      "output_type": "execute_result"
     }
