Test if markdowns are rendered in githubpages

--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -504,7 +504,8 @@
     "\"\"\"\n",
     "\n",
     "credentials_dict = json.load(open(credentials_json))\n",
-    "gc, authorized_user = gspread.oauth_from_dict(credentials_dict)\n",
+    "with io.capture_output() as captured:\n",
+    "    gc, authorized_user = gspread.oauth_from_dict(credentials_dict)\n",
     "\n",
     "sh = gc.create(\"[GREENPEACE] Resumo\")\n",
     "\n",
