Wrap up Exercicio 3

--- a/Exercicio_2/Exercicio_2.ipynb
+++ b/Exercicio_2/Exercicio_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,20 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|    | first_name   | last_name   | gender   | email                           | cell           |   age |\n",
-      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|\n",
-      "|  0 | Guimar       | da Mata     | male     | guimar.damata@example.com       | (29) 5636-9110 |    67 |\n",
-      "|  1 | Carlúcia     | Vieira      | female   | carlucia.vieira@example.com     | (59) 9856-0868 |    30 |\n",
-      "|  2 | Clodomiro    | Viana       | male     | clodomiro.viana@example.com     | (47) 8176-9128 |    59 |\n",
-      "|  3 | Evangelista  | Silva       | male     | evangelista.silva@example.com   | (41) 8319-1577 |    70 |\n",
-      "|  4 | Fulgêncio    | Fernandes   | male     | fulgencio.fernandes@example.com | (66) 2726-3136 |    29 |\n"
+      "|    | first_name   | last_name    | gender   | email                          | cell           |   age |\n",
+      "|---:|:-------------|:-------------|:---------|:-------------------------------|:---------------|------:|\n",
+      "|  0 | Estéfano     | da Mata      | male     | estefano.damata@example.com    | (56) 9693-3238 |    78 |\n",
+      "|  1 | Maricelda    | Moreira      | female   | maricelda.moreira@example.com  | (04) 7121-9919 |    36 |\n",
+      "|  2 | Miriam       | da Conceição | female   | miriam.daconceicao@example.com | (88) 0404-3545 |    63 |\n",
+      "|  3 | Alcides      | da Mata      | male     | alcides.damata@example.com     | (95) 9629-9084 |    40 |\n",
+      "|  4 | Karina       | Moreira      | female   | karina.moreira@example.com     | (07) 8418-9067 |    72 |\n"
      ]
     }
    ],
@@ -92,20 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|    | first_name   | last_name   | gender   | email                           | cell           |   age | state          |\n",
-      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|:---------------|\n",
-      "|  0 | Clodomiro    | Viana       | male     | clodomiro.viana@example.com     | (47) 8176-9128 |    59 | Santa Catarina |\n",
-      "|  1 | Evangelista  | Silva       | male     | evangelista.silva@example.com   | (41) 8319-1577 |    70 | Paraná         |\n",
-      "|  2 | Fulgêncio    | Fernandes   | male     | fulgencio.fernandes@example.com | (66) 2726-3136 |    29 | Mato Grosso    |\n",
-      "|  3 | Balbino      | Almeida     | male     | balbino.almeida@example.com     | (18) 2615-8313 |    70 | São Paulo      |\n",
-      "|  4 | Odara        | Silveira    | female   | odara.silveira@example.com      | (44) 5816-3343 |    38 | Paraná         |\n"
+      "|    | first_name   | last_name    | gender   | email                          | cell           |   age | state               |\n",
+      "|---:|:-------------|:-------------|:---------|:-------------------------------|:---------------|------:|:--------------------|\n",
+      "|  0 | Miriam       | da Conceição | female   | miriam.daconceicao@example.com | (88) 0404-3545 |    63 | Ceará               |\n",
+      "|  1 | Alcides      | da Mata      | male     | alcides.damata@example.com     | (95) 9629-9084 |    40 | Roraima             |\n",
+      "|  2 | Marlene      | da Luz       | female   | marlene.daluz@example.com      | (35) 2801-6093 |    69 | Minas Gerais        |\n",
+      "|  3 | Aleixo       | Teixeira     | male     | aleixo.teixeira@example.com    | (84) 0725-5908 |    77 | Rio Grande do Norte |\n",
+      "|  4 | Hermes       | da Cruz      | male     | hermes.dacruz@example.com      | (18) 6176-8557 |    69 | São Paulo           |\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -292,20 +292,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|    | first_name   | last_name   | gender   | email                           | cell           |   age | state          | pokemon   |\n",
-      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|:---------------|:----------|\n",
-      "|  0 | Clodomiro    | Viana       | male     | clodomiro.viana@example.com     | (47) 8176-9128 |    59 | Santa Catarina | popplio   |\n",
-      "|  1 | Evangelista  | Silva       | male     | evangelista.silva@example.com   | (41) 8319-1577 |    70 | Paraná         | torchic   |\n",
-      "|  2 | Fulgêncio    | Fernandes   | male     | fulgencio.fernandes@example.com | (66) 2726-3136 |    29 | Mato Grosso    | bulbasaur |\n",
-      "|  3 | Balbino      | Almeida     | male     | balbino.almeida@example.com     | (18) 2615-8313 |    70 | São Paulo      | chikorita |\n",
-      "|  4 | Odara        | Silveira    | female   | odara.silveira@example.com      | (44) 5816-3343 |    38 | Paraná         | mudkip    |\n"
+      "|    | first_name   | last_name    | gender   | email                          | cell           |   age | state               | pokemon   |\n",
+      "|---:|:-------------|:-------------|:---------|:-------------------------------|:---------------|------:|:--------------------|:----------|\n",
+      "|  0 | Miriam       | da Conceição | female   | miriam.daconceicao@example.com | (88) 0404-3545 |    63 | Ceará               | squirtle  |\n",
+      "|  1 | Alcides      | da Mata      | male     | alcides.damata@example.com     | (95) 9629-9084 |    40 | Roraima             | squirtle  |\n",
+      "|  2 | Marlene      | da Luz       | female   | marlene.daluz@example.com      | (35) 2801-6093 |    69 | Minas Gerais        | scorbunny |\n",
+      "|  3 | Aleixo       | Teixeira     | male     | aleixo.teixeira@example.com    | (84) 0725-5908 |    77 | Rio Grande do Norte | snivy     |\n",
+      "|  4 | Hermes       | da Cruz      | male     | hermes.dacruz@example.com      | (18) 6176-8557 |    69 | São Paulo           | litten    |\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,19 +345,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder for type *grass* created successfully with ID: 1i_h8iSixiEnoXgkHUCGn_gfX4Yyxa1Gw\n",
-      "Folder for type *electric* created successfully with ID: 1zptJq5hbPJweNDhUT3cPY_lo-aKlRc_J\n",
-      "Folder for type *flying* created successfully with ID: 11cmXfgoAT2oLiUp15QcBi-krz2z87RGP\n",
-      "Folder for type *fire* created successfully with ID: 1-35HN45ksh0ldfEqRejIEdxhX2x04wTe\n",
-      "Folder for type *water* created successfully with ID: 16dhjTNwQvau3M257txU6dg2n3GEXNXoS\n",
-      "Folder for type *poison* created successfully with ID: 1wKx3eKli6IWSOQXMga8x5e2z-BaV0r5u\n"
+      "Folder for type *fire* created successfully with ID: 1JwSMdMlhH-8W-3IaG11mfFIRt654Spte\n",
+      "Folder for type *electric* created successfully with ID: 1kLYTUvBPcCp4qsoAmvwU3d_bYM_nNeaJ\n",
+      "Folder for type *water* created successfully with ID: 1VJtJViuSebZ8lSNYMEr2CaWD5dLrslWi\n",
+      "Folder for type *grass* created successfully with ID: 1v-tuhfVenofetZgZluym1RYts51mrAYM\n",
+      "Folder for type *flying* created successfully with ID: 19NQ0bYiau9s0R5aoU7RM-SRrxFl6lRpE\n",
+      "Folder for type *poison* created successfully with ID: 1A0QsgG1VbvbKmWU-WbwiXWVs1RLKt0mK\n"
      ]
     }
    ],
@@ -409,25 +409,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File for type *grass* and gender *male* created successfully with ID: 1TgQ-8BkBNYjjqT1BOCF_RKgGnUlpdmf2\n",
-      "File for type *grass* and gender *female* created successfully with ID: 11BKp2Nky2bovKMqOw7MX1p-gnrDNepm8\n",
-      "File for type *electric* and gender *male* created successfully with ID: 1YxhdoPFA94PzS-symzypZOkfIRw20xHe\n",
-      "File for type *electric* and gender *female* created successfully with ID: 1Y_7Nm61eDLtAbcv71YE3SJD8JMp_I0iW\n",
-      "File for type *flying* and gender *male* created successfully with ID: 1tidDCDZRjrHC2r50lnF0Xth7ahqIcb8T\n",
-      "File for type *flying* and gender *female* created successfully with ID: 16O2WXs6aIG1Mtdzz44n5VHHTUdc1Wl_2\n",
-      "File for type *fire* and gender *male* created successfully with ID: 1IMCVdtu_nzMxGR-TsKVbj9gav1Qskpik\n",
-      "File for type *fire* and gender *female* created successfully with ID: 1ANp0T7Bl7XxEK842NcHgtXCWgcuGPm-6\n",
-      "File for type *water* and gender *male* created successfully with ID: 1M5l45IXuQQmjDrnuF6I4IB9xVgbPRJk-\n",
-      "File for type *water* and gender *female* created successfully with ID: 1SpBkwFy5trsIpfswPOkOZyeVan8TBKI_\n",
-      "File for type *poison* and gender *male* created successfully with ID: 14XC5rpj8hcAXGO9GmxmHtAWsvaiO2IAo\n",
-      "File for type *poison* and gender *female* created successfully with ID: 1U2kNGA8GTDXOdNdnJCa-_RYyyOjPT4z3\n"
+      "File for type *fire* and gender *male* created successfully with ID: 14yNO8jzCbY8wxBHm3H4MCO3XS76oiAjF\n",
+      "File for type *fire* and gender *female* created successfully with ID: 1FGgiTu3qbvkhZb677QW8dvt_yvHOY76t\n",
+      "File for type *electric* and gender *male* created successfully with ID: 16bHx7IoqYGgWCj98Kaa3NqcT_KfGxsFA\n",
+      "File for type *electric* and gender *female* created successfully with ID: 14a4Tyhk0o93vUKilThltfRIUlkZFOGl9\n",
+      "File for type *water* and gender *male* created successfully with ID: 125_WB01mg_FFfVSwotUds7En51AFlyX1\n",
+      "File for type *water* and gender *female* created successfully with ID: 1yWUbGC6OXspIMwDC_Ssb0gdxTJ3UBFNS\n",
+      "File for type *grass* and gender *male* created successfully with ID: 1wHXnoEl0aMOi1cU0QD-XtIBo2PsRAZ4F\n",
+      "File for type *grass* and gender *female* created successfully with ID: 1hx6hAuwbFOhT2WgTc3skImmdNlcnh9vN\n",
+      "File for type *flying* and gender *male* created successfully with ID: 1VNVzfwMRY92UMosRaFVSEstBGo7MuQKt\n",
+      "File for type *flying* and gender *female* created successfully with ID: 1_iMuCmrVipPUOXOUK3q1r4qk8mVdi4r8\n",
+      "File for type *poison* and gender *male* created successfully with ID: 1ln7v-wZ05PLCzmRjVfSdnKwhyZ3oNQDC\n",
+      "File for type *poison* and gender *female* created successfully with ID: 1eJNJN7xThJ6BR7vER2KBZIx6XMPlegZH\n"
      ]
     }
    ],
@@ -473,24 +473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=258343893071-cjl374q7gmric124p10qb9kncgkieqmd.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A53257%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fspreadsheets+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&state=v0ycLKBr9OlfpV962PQHuqmUqMaoRq&access_type=offline\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'spreadsheetId': '11M9cEiL0IMbOv8_Z7RMz-p2O7m8Opff70x0M9aTpaJI',\n",
+       "{'spreadsheetId': '1xnxHHwzIrMScqnTYfiZdQ1_1rUAFCvPXhWhq1a5nFlk',\n",
        " 'replies': [{}]}"
       ]
      },
-     "execution_count": 498,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,6 +496,7 @@
     "Disponível em: https://docs.google.com/spreadsheets/d/11M9cEiL0IMbOv8_Z7RMz-p2O7m8Opff70x0M9aTpaJI/edit?usp=sharing\n",
     "\"\"\"\n",
     "\n",
+    "credentials_json = Path(\"..\") / \"credentials.json\"\n",
     "credentials_dict = json.load(open(credentials_json))\n",
     "with io.capture_output() as captured:\n",
     "    gc, authorized_user = gspread.oauth_from_dict(credentials_dict)\n",
@@ -517,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -526,24 +520,24 @@
      "text": [
       "| region       |   count |\n",
       "|:-------------|--------:|\n",
-      "| Sudeste      |     203 |\n",
-      "| Nordeste     |     151 |\n",
-      "| Sul          |     143 |\n",
-      "| Norte        |     103 |\n",
-      "| Centro-Oeste |      68 |\n"
+      "| Sudeste      |     211 |\n",
+      "| Nordeste     |     158 |\n",
+      "| Sul          |     138 |\n",
+      "| Norte        |     111 |\n",
+      "| Centro-Oeste |      58 |\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'spreadsheetId': '11M9cEiL0IMbOv8_Z7RMz-p2O7m8Opff70x0M9aTpaJI',\n",
+       "{'spreadsheetId': '1xnxHHwzIrMScqnTYfiZdQ1_1rUAFCvPXhWhq1a5nFlk',\n",
        " 'updatedRange': \"'Número de pessoas por região do Brasil'!A1:B6\",\n",
        " 'updatedRows': 6,\n",
        " 'updatedColumns': 2,\n",
        " 'updatedCells': 12}"
       ]
      },
-     "execution_count": 499,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -632,24 +626,24 @@
      "text": [
       "|          |   Norte |   Sul |   Sudeste |   Nordeste |   Centro-Oeste |\n",
       "|:---------|--------:|------:|----------:|-----------:|---------------:|\n",
-      "| grass    |      35 |    46 |        64 |         49 |             19 |\n",
-      "| electric |       2 |    10 |         6 |          4 |              0 |\n",
-      "| flying   |       5 |     4 |         5 |          4 |              7 |\n",
-      "| fire     |      27 |    35 |        64 |         55 |             19 |\n",
-      "| water    |      39 |    52 |        69 |         43 |             30 |\n"
+      "| fire     |      23 |    37 |        69 |         43 |             25 |\n",
+      "| electric |       6 |    10 |         9 |          8 |              2 |\n",
+      "| water    |      40 |    38 |        66 |         49 |             22 |\n",
+      "| grass    |      42 |    53 |        67 |         58 |              9 |\n",
+      "| flying   |       8 |     4 |         9 |          5 |              2 |\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'spreadsheetId': '11M9cEiL0IMbOv8_Z7RMz-p2O7m8Opff70x0M9aTpaJI',\n",
+       "{'spreadsheetId': '1xnxHHwzIrMScqnTYfiZdQ1_1rUAFCvPXhWhq1a5nFlk',\n",
        " 'updatedRange': \"'Elemento de pokemons por região do Brasil'!A1:F7\",\n",
        " 'updatedRows': 7,\n",
        " 'updatedColumns': 6,\n",
        " 'updatedCells': 42}"
       ]
      },
-     "execution_count": 500,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
