Update paths in Exercicio_1.ipynb

--- a/Exercicio_1/Exercicio_1.ipynb
+++ b/Exercicio_1/Exercicio_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,13 +31,13 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Tarefa 2 - Item 1\n",
+    "Exercício 1 - Tarefa_2 - Item_1\n",
     "\n",
     "Qual o tipo de reação mais reportado na tabela? Lembre-se que uma linha pode ter\n",
     "mais de uma reação separada por “;”.\n",
     "\"\"\"\n",
     "\n",
-    "query_path = Path(\".\") / \"Tarefa 2/Item 1/item1.sql\"\n",
+    "query_path = Path(\".\") / \"Tarefa_2/Item_1/item1.sql\"\n",
     "with open(query_path, \"r\") as fd:\n",
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,12 +62,12 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Tarefa 2 - Item 2\n",
+    "Exercício 1 - Tarefa_2 - Item_2\n",
     "\n",
     "Qual o nome da indústria que tem mais mortes reportadas?\n",
     "\"\"\"\n",
     "\n",
-    "query_path = Path(\".\") / \"Tarefa 2/Item 2/item2.sql\"\n",
+    "query_path = Path(\".\") / \"Tarefa_2/Item_2/item2.sql\"\n",
     "with open(query_path, \"r\") as fd:\n",
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,13 +94,13 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Tarefa 2 - Item 3\n",
+    "Exercício 1 - Tarefa_2 - Item_3\n",
     "\n",
     "Quais as 3 principais reações adversas de pessoas entre 18-25 anos na indústria de\n",
     "cosméticos?\n",
     "\"\"\"\n",
     "\n",
-    "query_path = Path(\".\") / \"Tarefa 2/Item 3/item3.sql\"\n",
+    "query_path = Path(\".\") / \"Tarefa_2/Item_3/item3.sql\"\n",
     "with open(query_path, \"r\") as fd:\n",
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
